--- a/WEB版/timer/style.css
+++ b/WEB版/timer/style.css
@@ -4,6 +4,7 @@ body, html {
     justify-content: center;
     align-items: center;
     font-family: Arial, sans-serif;
+    height: 95vh;
 }
 
 #timer {
@@ -11,14 +12,14 @@ body, html {
 }
 
 #time {
-    font-size: 48px;
+    font-size: 300px;
     margin-bottom: 20px;
 }
 
 input, button {
     margin: 5px;
     padding: 10px;
-    font-size: 16px;
+    font-size: 64px;
     border: none; /* 移除边框 */
     border-radius: 10px; /* 添加圆角 */
     background-color: #004080; /* 深蓝色填充 */
@@ -29,11 +30,13 @@ input, button {
 input {
     border: 1px solid #ccc; /* 给输入框添加边框 */
     background-color: white; /* 输入框背景色为白色 */
-    color: black; /* 输入框文字颜色为黑色 */
+    color: black; /* 输入框文字颜色 */
+    font-size: 32px;
+    margin: 50px;
 }
 
 button:hover {
-    background-color: #003366; /* 鼠标悬停时按钮颜色变深 */
+    background-color: #00264b; /* 鼠标悬停时按钮颜色变深 */
 }
 
 /* 新增样式 */
