--- a/WEB_ver/stat/style.css
+++ b/WEB_ver/stat/style.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,4 +92,8 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+button:hover {
+    background-color: #dfb50e; /* 鼠标悬停时按钮颜色变深 */
 }
